[ICU-8268] inefficient use of Long, Integer, Character constructors. X-Commit-URL: https://ssl.icu-project.org/trac/changeset/30734 Former-commit-id: b3a45518987d0d276fc6d52e2edb11a77441ac19